[package]
name = "anb"
version = "0.1.0"
authors = ["Eugene Morozov <jmv@emorozov.net>"]
edition = "2018"

[dependencies]
clap = "2"
subprocess = "0.2.6"
regex = "1"
reqwest = { version = "0.10", features = ["blocking"] }
serde_json = "1.0"
base64 = "0.13"
console = "0.13"
config = "0.10"
directories = "3.0"

